--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here "
+    "#Your code here \n",
+    "import"
    ]
   },
   {
