Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,8 @@
    "outputs": [],
    "source": [
     "#Your code here \n",
-    "import"
+    "import json\n",
+    "data json"
    ]
   },
   {
