Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "#Your code here \n",
     "import json\n",
-    "data json"
+    "data json.load(open(\"disease_dat\"))"
    ]
   },
   {
