--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "data"
    ]
   },
   {
