Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,22 +77,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'keys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-653939eb48c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"data\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'keys'"
-     ]
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 'F4468C3D-340A-4CD2-84A3-DF554DFF065E',\n",
+       " 2,\n",
+       " 1527194521,\n",
+       " '959778',\n",
+       " 1527194521,\n",
+       " '959778',\n",
+       " None,\n",
+       " '2016',\n",
+       " '2016',\n",
+       " 'AL',\n",
+       " 'Alabama',\n",
+       " 'BRFSS',\n",
+       " 'Alcohol',\n",
+       " 'Binge drinking prevalence among adults aged >= 18 years',\n",
+       " None,\n",
+       " '%',\n",
+       " 'Crude Prevalence',\n",
+       " '13',\n",
+       " '13',\n",
+       " None,\n",
+       " None,\n",
+       " '11.9',\n",
+       " '14.1',\n",
+       " 'Overall',\n",
+       " 'Overall',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " [None, '32.84057112200048', '-86.63186076199969', None, False],\n",
+       " None,\n",
+       " '01',\n",
+       " 'ALC',\n",
+       " 'ALC2_2',\n",
+       " 'CRDPREV',\n",
+       " 'OVERALL',\n",
+       " 'OVR',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as \n",
     "data[\"data\"]"
    ]
   },
