Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,64 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2,\n",
-       " 'F4468C3D-340A-4CD2-84A3-DF554DFF065E',\n",
-       " 2,\n",
-       " 1527194521,\n",
-       " '959778',\n",
-       " 1527194521,\n",
-       " '959778',\n",
-       " None,\n",
-       " '2016',\n",
-       " '2016',\n",
-       " 'AL',\n",
-       " 'Alabama',\n",
-       " 'BRFSS',\n",
-       " 'Alcohol',\n",
-       " 'Binge drinking prevalence among adults aged >= 18 years',\n",
-       " None,\n",
-       " '%',\n",
-       " 'Crude Prevalence',\n",
-       " '13',\n",
-       " '13',\n",
-       " None,\n",
-       " None,\n",
-       " '11.9',\n",
-       " '14.1',\n",
-       " 'Overall',\n",
-       " 'Overall',\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " [None, '32.84057112200048', '-86.63186076199969', None, False],\n",
-       " None,\n",
-       " '01',\n",
-       " 'ALC',\n",
-       " 'ALC2_2',\n",
-       " 'CRDPREV',\n",
-       " 'OVERALL',\n",
-       " 'OVR',\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as \n",
-    "data[\"data\"]"
+    "import pandas as pd\n",
+    "df = pd.DataFrame(data[\"data\"])\n"
    ]
   },
   {
