--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1145,16 +1145,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
        "      <th>4</th>\n",
        "      <th>5</th>\n",
        "      <th>6</th>\n",
        "      <th>7</th>\n",
        "      <th>8</th>\n",
        "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <th>...</th>\n",
        "      <th>32</th>\n",
        "      <th>33</th>\n",
@@ -1171,16 +1171,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>FF49C41F-CE8D-46C4-9164-653B1227CF6F</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
        "      <td>...</td>\n",
        "      <td>59</td>\n",
        "      <td>ALC</td>\n",
@@ -1195,16 +1195,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>F4468C3D-340A-4CD2-84A3-DF554DFF065E</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
        "      <td>...</td>\n",
        "      <td>01</td>\n",
        "      <td>ALC</td>\n",
@@ -1219,16 +1219,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>65609156-A343-4869-B03F-2BA62E96AC19</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
        "      <td>...</td>\n",
        "      <td>02</td>\n",
        "      <td>ALC</td>\n",
@@ -1243,16 +1243,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0DB09B00-EFEB-4AC0-9467-A7CBD2B57BF3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
        "      <td>...</td>\n",
        "      <td>04</td>\n",
        "      <td>ALC</td>\n",
@@ -1267,16 +1267,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>D98DA5BA-6FD6-40F5-A9B1-ABD45E44967B</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>1527194521</td>\n",
        "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
        "      <td>...</td>\n",
        "      <td>05</td>\n",
        "      <td>ALC</td>\n",
@@ -1291,42 +1291,42 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 42 columns</p>\n",
+       "<p>5 rows × 38 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   0                                     1   2           3       4   \\\n",
-       "0   1  FF49C41F-CE8D-46C4-9164-653B1227CF6F   1  1527194521  959778   \n",
-       "1   2  F4468C3D-340A-4CD2-84A3-DF554DFF065E   2  1527194521  959778   \n",
-       "2   3  65609156-A343-4869-B03F-2BA62E96AC19   3  1527194521  959778   \n",
-       "3   4  0DB09B00-EFEB-4AC0-9467-A7CBD2B57BF3   4  1527194521  959778   \n",
-       "4   5  D98DA5BA-6FD6-40F5-A9B1-ABD45E44967B   5  1527194521  959778   \n",
+       "       4           5       6     7     8     9   10             11     12  \\\n",
+       "0  959778  1527194521  959778  None  2016  2016  US  United States  BRFSS   \n",
+       "1  959778  1527194521  959778  None  2016  2016  AL        Alabama  BRFSS   \n",
+       "2  959778  1527194521  959778  None  2016  2016  AK         Alaska  BRFSS   \n",
+       "3  959778  1527194521  959778  None  2016  2016  AZ        Arizona  BRFSS   \n",
+       "4  959778  1527194521  959778  None  2016  2016  AR       Arkansas  BRFSS   \n",
        "\n",
-       "           5       6     7     8     9   ...   32   33      34       35  \\\n",
-       "0  1527194521  959778  None  2016  2016  ...   59  ALC  ALC2_2  CRDPREV   \n",
-       "1  1527194521  959778  None  2016  2016  ...   01  ALC  ALC2_2  CRDPREV   \n",
-       "2  1527194521  959778  None  2016  2016  ...   02  ALC  ALC2_2  CRDPREV   \n",
-       "3  1527194521  959778  None  2016  2016  ...   04  ALC  ALC2_2  CRDPREV   \n",
-       "4  1527194521  959778  None  2016  2016  ...   05  ALC  ALC2_2  CRDPREV   \n",
+       "        13  ...   32   33      34       35       36   37    38    39    40  \\\n",
+       "0  Alcohol  ...   59  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
+       "1  Alcohol  ...   01  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
+       "2  Alcohol  ...   02  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
+       "3  Alcohol  ...   04  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
+       "4  Alcohol  ...   05  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
        "\n",
-       "        36   37    38    39    40    41  \n",
-       "0  OVERALL  OVR  None  None  None  None  \n",
-       "1  OVERALL  OVR  None  None  None  None  \n",
-       "2  OVERALL  OVR  None  None  None  None  \n",
-       "3  OVERALL  OVR  None  None  None  None  \n",
-       "4  OVERALL  OVR  None  None  None  None  \n",
+       "     41  \n",
+       "0  None  \n",
+       "1  None  \n",
+       "2  None  \n",
+       "3  None  \n",
+       "4  None  \n",
        "\n",
-       "[5 rows x 42 columns]"
+       "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df.head()"
+    "df.iloc[:,4:].head()"
    ]
   },
   {
