--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1145,9 +1145,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
        "      <th>7</th>\n",
        "      <th>8</th>\n",
        "      <th>9</th>\n",
@@ -1155,6 +1152,9 @@
        "      <th>11</th>\n",
        "      <th>12</th>\n",
        "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
        "      <th>...</th>\n",
        "      <th>32</th>\n",
        "      <th>33</th>\n",
@@ -1171,9 +1171,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>959778</td>\n",
-       "      <td>1527194521</td>\n",
-       "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
@@ -1181,6 +1178,9 @@
        "      <td>United States</td>\n",
        "      <td>BRFSS</td>\n",
        "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
        "      <td>...</td>\n",
        "      <td>59</td>\n",
        "      <td>ALC</td>\n",
@@ -1195,9 +1195,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>959778</td>\n",
-       "      <td>1527194521</td>\n",
-       "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
@@ -1205,6 +1202,9 @@
        "      <td>Alabama</td>\n",
        "      <td>BRFSS</td>\n",
        "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
        "      <td>...</td>\n",
        "      <td>01</td>\n",
        "      <td>ALC</td>\n",
@@ -1219,9 +1219,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>959778</td>\n",
-       "      <td>1527194521</td>\n",
-       "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
@@ -1229,6 +1226,9 @@
        "      <td>Alaska</td>\n",
        "      <td>BRFSS</td>\n",
        "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
        "      <td>...</td>\n",
        "      <td>02</td>\n",
        "      <td>ALC</td>\n",
@@ -1243,9 +1243,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>959778</td>\n",
-       "      <td>1527194521</td>\n",
-       "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
@@ -1253,6 +1250,9 @@
        "      <td>Arizona</td>\n",
        "      <td>BRFSS</td>\n",
        "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
        "      <td>...</td>\n",
        "      <td>04</td>\n",
        "      <td>ALC</td>\n",
@@ -1267,9 +1267,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>959778</td>\n",
-       "      <td>1527194521</td>\n",
-       "      <td>959778</td>\n",
        "      <td>None</td>\n",
        "      <td>2016</td>\n",
        "      <td>2016</td>\n",
@@ -1277,6 +1274,9 @@
        "      <td>Arkansas</td>\n",
        "      <td>BRFSS</td>\n",
        "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
        "      <td>...</td>\n",
        "      <td>05</td>\n",
        "      <td>ALC</td>\n",
@@ -1291,42 +1291,42 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 38 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       4           5       6     7     8     9   10             11     12  \\\n",
-       "0  959778  1527194521  959778  None  2016  2016  US  United States  BRFSS   \n",
-       "1  959778  1527194521  959778  None  2016  2016  AL        Alabama  BRFSS   \n",
-       "2  959778  1527194521  959778  None  2016  2016  AK         Alaska  BRFSS   \n",
-       "3  959778  1527194521  959778  None  2016  2016  AZ        Arizona  BRFSS   \n",
-       "4  959778  1527194521  959778  None  2016  2016  AR       Arkansas  BRFSS   \n",
+       "     7     8     9   10             11     12       13  \\\n",
+       "0  None  2016  2016  US  United States  BRFSS  Alcohol   \n",
+       "1  None  2016  2016  AL        Alabama  BRFSS  Alcohol   \n",
+       "2  None  2016  2016  AK         Alaska  BRFSS  Alcohol   \n",
+       "3  None  2016  2016  AZ        Arizona  BRFSS  Alcohol   \n",
+       "4  None  2016  2016  AR       Arkansas  BRFSS  Alcohol   \n",
        "\n",
-       "        13  ...   32   33      34       35       36   37    38    39    40  \\\n",
-       "0  Alcohol  ...   59  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
-       "1  Alcohol  ...   01  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
-       "2  Alcohol  ...   02  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
-       "3  Alcohol  ...   04  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
-       "4  Alcohol  ...   05  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None   \n",
+       "                                                  14    15 16  ...   32   33  \\\n",
+       "0  Binge drinking prevalence among adults aged >=...  None  %  ...   59  ALC   \n",
+       "1  Binge drinking prevalence among adults aged >=...  None  %  ...   01  ALC   \n",
+       "2  Binge drinking prevalence among adults aged >=...  None  %  ...   02  ALC   \n",
+       "3  Binge drinking prevalence among adults aged >=...  None  %  ...   04  ALC   \n",
+       "4  Binge drinking prevalence among adults aged >=...  None  %  ...   05  ALC   \n",
        "\n",
-       "     41  \n",
-       "0  None  \n",
-       "1  None  \n",
-       "2  None  \n",
-       "3  None  \n",
-       "4  None  \n",
+       "       34       35       36   37    38    39    40    41  \n",
+       "0  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
+       "1  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
+       "2  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
+       "3  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
+       "4  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
        "\n",
-       "[5 rows x 38 columns]"
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df.iloc[:,4:].head()"
+    "df.iloc[:,7:8].head()"
    ]
   },
   {
