Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,212 +1121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>...</th>\n",
-       "      <th>32</th>\n",
-       "      <th>33</th>\n",
-       "      <th>34</th>\n",
-       "      <th>35</th>\n",
-       "      <th>36</th>\n",
-       "      <th>37</th>\n",
-       "      <th>38</th>\n",
-       "      <th>39</th>\n",
-       "      <th>40</th>\n",
-       "      <th>41</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>None</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>BRFSS</td>\n",
-       "      <td>Alcohol</td>\n",
-       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>%</td>\n",
-       "      <td>...</td>\n",
-       "      <td>59</td>\n",
-       "      <td>ALC</td>\n",
-       "      <td>ALC2_2</td>\n",
-       "      <td>CRDPREV</td>\n",
-       "      <td>OVERALL</td>\n",
-       "      <td>OVR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>None</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>BRFSS</td>\n",
-       "      <td>Alcohol</td>\n",
-       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>%</td>\n",
-       "      <td>...</td>\n",
-       "      <td>01</td>\n",
-       "      <td>ALC</td>\n",
-       "      <td>ALC2_2</td>\n",
-       "      <td>CRDPREV</td>\n",
-       "      <td>OVERALL</td>\n",
-       "      <td>OVR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>None</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>BRFSS</td>\n",
-       "      <td>Alcohol</td>\n",
-       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>%</td>\n",
-       "      <td>...</td>\n",
-       "      <td>02</td>\n",
-       "      <td>ALC</td>\n",
-       "      <td>ALC2_2</td>\n",
-       "      <td>CRDPREV</td>\n",
-       "      <td>OVERALL</td>\n",
-       "      <td>OVR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>None</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>BRFSS</td>\n",
-       "      <td>Alcohol</td>\n",
-       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>%</td>\n",
-       "      <td>...</td>\n",
-       "      <td>04</td>\n",
-       "      <td>ALC</td>\n",
-       "      <td>ALC2_2</td>\n",
-       "      <td>CRDPREV</td>\n",
-       "      <td>OVERALL</td>\n",
-       "      <td>OVR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>None</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>Arkansas</td>\n",
-       "      <td>BRFSS</td>\n",
-       "      <td>Alcohol</td>\n",
-       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>%</td>\n",
-       "      <td>...</td>\n",
-       "      <td>05</td>\n",
-       "      <td>ALC</td>\n",
-       "      <td>ALC2_2</td>\n",
-       "      <td>CRDPREV</td>\n",
-       "      <td>OVERALL</td>\n",
-       "      <td>OVR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     7     8     9   10             11     12       13  \\\n",
-       "0  None  2016  2016  US  United States  BRFSS  Alcohol   \n",
-       "1  None  2016  2016  AL        Alabama  BRFSS  Alcohol   \n",
-       "2  None  2016  2016  AK         Alaska  BRFSS  Alcohol   \n",
-       "3  None  2016  2016  AZ        Arizona  BRFSS  Alcohol   \n",
-       "4  None  2016  2016  AR       Arkansas  BRFSS  Alcohol   \n",
-       "\n",
-       "                                                  14    15 16  ...   32   33  \\\n",
-       "0  Binge drinking prevalence among adults aged >=...  None  %  ...   59  ALC   \n",
-       "1  Binge drinking prevalence among adults aged >=...  None  %  ...   01  ALC   \n",
-       "2  Binge drinking prevalence among adults aged >=...  None  %  ...   02  ALC   \n",
-       "3  Binge drinking prevalence among adults aged >=...  None  %  ...   04  ALC   \n",
-       "4  Binge drinking prevalence among adults aged >=...  None  %  ...   05  ALC   \n",
-       "\n",
-       "       34       35       36   37    38    39    40    41  \n",
-       "0  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
-       "1  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
-       "2  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
-       "3  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
-       "4  ALC2_2  CRDPREV  OVERALL  OVR  None  None  None  None  \n",
-       "\n",
-       "[5 rows x 35 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'value_counts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-317abf7c1d87>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'value_counts'"
+     ]
     }
    ],
    "source": [
     "#Your code here\n",
-    "df.iloc[:,7:8].head()"
+    "df.iloc[:,7:8].nunique"
    ]
   },
   {
