--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,23 +1121,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>...</th>\n",
+       "      <th>32</th>\n",
+       "      <th>33</th>\n",
+       "      <th>34</th>\n",
+       "      <th>35</th>\n",
+       "      <th>36</th>\n",
+       "      <th>37</th>\n",
+       "      <th>38</th>\n",
+       "      <th>39</th>\n",
+       "      <th>40</th>\n",
+       "      <th>41</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Crude Prevalence</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Crude Prevalence</td>\n",
+       "      <td>...</td>\n",
+       "      <td>01</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Crude Prevalence</td>\n",
+       "      <td>...</td>\n",
+       "      <td>02</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Crude Prevalence</td>\n",
+       "      <td>...</td>\n",
+       "      <td>04</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>BRFSS</td>\n",
+       "      <td>Alcohol</td>\n",
+       "      <td>Binge drinking prevalence among adults aged &gt;=...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Crude Prevalence</td>\n",
+       "      <td>...</td>\n",
+       "      <td>05</td>\n",
+       "      <td>ALC</td>\n",
+       "      <td>ALC2_2</td>\n",
+       "      <td>CRDPREV</td>\n",
+       "      <td>OVERALL</td>\n",
+       "      <td>OVR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Series([], Name: 7, dtype: int64)"
+       "     8     9   10             11     12       13  \\\n",
+       "0  2016  2016  US  United States  BRFSS  Alcohol   \n",
+       "1  2016  2016  AL        Alabama  BRFSS  Alcohol   \n",
+       "2  2016  2016  AK         Alaska  BRFSS  Alcohol   \n",
+       "3  2016  2016  AZ        Arizona  BRFSS  Alcohol   \n",
+       "4  2016  2016  AR       Arkansas  BRFSS  Alcohol   \n",
+       "\n",
+       "                                                  14    15 16  \\\n",
+       "0  Binge drinking prevalence among adults aged >=...  None  %   \n",
+       "1  Binge drinking prevalence among adults aged >=...  None  %   \n",
+       "2  Binge drinking prevalence among adults aged >=...  None  %   \n",
+       "3  Binge drinking prevalence among adults aged >=...  None  %   \n",
+       "4  Binge drinking prevalence among adults aged >=...  None  %   \n",
+       "\n",
+       "                 17  ...   32   33      34       35       36   37    38    39  \\\n",
+       "0  Crude Prevalence  ...   59  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
+       "1  Crude Prevalence  ...   01  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
+       "2  Crude Prevalence  ...   02  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
+       "3  Crude Prevalence  ...   04  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
+       "4  Crude Prevalence  ...   05  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
+       "\n",
+       "     40    41  \n",
+       "0  None  None  \n",
+       "1  None  None  \n",
+       "2  None  None  \n",
+       "3  None  None  \n",
+       "4  None  None  \n",
+       "\n",
+       "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "df.iloc[:,7:8][7].value_counts()"
+    "df_slicedf.iloc[:,8:].head()"
    ]
   },
   {
