Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,7 +1121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Your code here\n",
+    "df_sliced = df.iloc[:,8:].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1326,14 +1336,13 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here\n",
-    "df_slicedf.iloc[:,8:].head()"
+    "df_sliced.head()"
    ]
   },
   {
