Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1097,7 +1097,7 @@
     }
    ],
    "source": [
-    "data[\"meta\"][\"view\"][\"columns\"]"
+    "data[\"meta\"][\"view\"][\"columns\"][4]"
    ]
   },
   {
