Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,77 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': -1,\n",
-       "  'name': 'sid',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':sid',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': -1,\n",
-       "  'name': 'id',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':id',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': -1,\n",
-       "  'name': 'position',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':position',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': -1,\n",
-       "  'name': 'created_at',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':created_at',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': -1,\n",
-       "  'name': 'created_meta',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':created_meta',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': -1,\n",
-       "  'name': 'updated_at',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':updated_at',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': -1,\n",
-       "  'name': 'updated_meta',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':updated_meta',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': -1,\n",
-       "  'name': 'meta',\n",
-       "  'dataTypeName': 'meta_data',\n",
-       "  'fieldName': ':meta',\n",
-       "  'position': 0,\n",
-       "  'renderTypeName': 'meta_data',\n",
-       "  'format': {},\n",
-       "  'flags': ['hidden']},\n",
-       " {'id': 360864928,\n",
+       "[{'id': 360864928,\n",
        "  'name': 'YearStart',\n",
        "  'dataTypeName': 'number',\n",
        "  'description': 'Starting Year\\n',\n",
@@ -1091,13 +1027,13 @@
        "  'format': {}}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[\"meta\"][\"view\"][\"columns\"][4]"
+    "data[\"meta\"][\"view\"][\"columns\"][:]"
    ]
   },
   {
