Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1027,13 +1027,13 @@
        "  'format': {}}]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[\"meta\"][\"view\"][\"columns\"][:]"
+    "data[\"meta\"][\"view\"][\"columns\"][8:]"
    ]
   },
   {
