Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1033,7 +1033,7 @@
     }
    ],
    "source": [
-    "data[\"meta\"][\"view\"][\"columns\"][8:]"
+    "column_dicts =data[\"meta\"][\"view\"][\"columns\"][8:]"
    ]
   },
   {
