--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(map(lambda ))"
+    "list(map(lambda x : (x[])))"
    ]
   },
   {
