Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,6 +86,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 360864928,\n",
+       " 'name': 'YearStart',\n",
+       " 'dataTypeName': 'number',\n",
+       " 'description': 'Starting Year\\n',\n",
+       " 'fieldName': 'yearstart',\n",
+       " 'position': 1,\n",
+       " 'renderTypeName': 'number',\n",
+       " 'tableColumnId': 36246792,\n",
+       " 'width': 208,\n",
+       " 'cachedContents': {'largest': '2016',\n",
+       "  'non_null': 519718,\n",
+       "  'average': '2013.141884637438',\n",
+       "  'null': 0,\n",
+       "  'top': [{'item': '2016', 'count': 20},\n",
+       "   {'item': '2015', 'count': 19},\n",
+       "   {'item': '2014', 'count': 18},\n",
+       "   {'item': '2013', 'count': 17},\n",
+       "   {'item': '2012', 'count': 16},\n",
+       "   {'item': '2011', 'count': 15},\n",
+       "   {'item': '2010', 'count': 14},\n",
+       "   {'item': '2009', 'count': 13},\n",
+       "   {'item': '2008', 'count': 12},\n",
+       "   {'item': '2007', 'count': 11},\n",
+       "   {'item': '2001', 'count': 10}],\n",
+       "  'smallest': '2001',\n",
+       "  'sum': '1046266074'},\n",
+       " 'format': {'precisionStyle': 'standard',\n",
+       "  'noCommas': 'true',\n",
+       "  'align': 'right'}}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_dicts[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
