Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(map(lambda x : (x[])))"
+    "list(map(lambda x : (x[\"name\"],x[\"pos\"])))"
    ]
   },
   {
