Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "list(map(lambda x : (x[\"name\"],x[\"position\"]),column_dicts))"
+    "sorted(list(map(lambda x : (x[\"name\"],x[\"position\"]),column_dicts)),key=lambda x: x[])"
    ]
   },
   {
