--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -195,13 +195,13 @@
        " ('StratificationID3', 34)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(list(map(lambda x : (x[\"name\"],x[\"position\"]),column_dicts)),key=lambda x: x[])"
+    "[sorted(list(map(lambda x : (x[\"name\"],x[\"position\"]),column_dicts)),key=lambda x: x[1])]"
    ]
   },
   {
