Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,55 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('YearStart', 1),\n",
-       " ('YearEnd', 2),\n",
-       " ('LocationAbbr', 3),\n",
-       " ('LocationDesc', 4),\n",
-       " ('DataSource', 5),\n",
-       " ('Topic', 6),\n",
-       " ('Question', 7),\n",
-       " ('Response', 8),\n",
-       " ('DataValueUnit', 9),\n",
-       " ('DataValueType', 10),\n",
-       " ('DataValue', 11),\n",
-       " ('DataValueAlt', 12),\n",
-       " ('DataValueFootnoteSymbol', 13),\n",
-       " ('DatavalueFootnote', 14),\n",
-       " ('LowConfidenceLimit', 15),\n",
-       " ('HighConfidenceLimit', 16),\n",
-       " ('StratificationCategory1', 17),\n",
-       " ('Stratification1', 18),\n",
-       " ('StratificationCategory2', 19),\n",
-       " ('Stratification2', 20),\n",
-       " ('StratificationCategory3', 21),\n",
-       " ('Stratification3', 22),\n",
-       " ('GeoLocation', 23),\n",
-       " ('ResponseID', 24),\n",
-       " ('LocationID', 25),\n",
-       " ('TopicID', 26),\n",
-       " ('QuestionID', 27),\n",
-       " ('DataValueTypeID', 28),\n",
-       " ('StratificationCategoryID1', 29),\n",
-       " ('StratificationID1', 30),\n",
-       " ('StratificationCategoryID2', 31),\n",
-       " ('StratificationID2', 32),\n",
-       " ('StratificationCategoryID3', 33),\n",
-       " ('StratificationID3', 34)]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[sorted(list(map(lambda x : (x[\"name\"],x[\"position\"]),column_dicts)),key=lambda x: x[1])]"
+    "columns = [x[0] for x in sorted(list(map(lambda x : (x[\"name\"],x[\"position\"]),column_dicts)),key=lambda x: x[1])]"
    ]
   },
   {
