Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -384,6 +386,15 @@
    ],
    "source": [
     "df_sliced.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sliced.co"
    ]
   },
   {
