--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -198,27 +198,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
+       "      <th>YearStart</th>\n",
+       "      <th>YearEnd</th>\n",
+       "      <th>LocationAbbr</th>\n",
+       "      <th>LocationDesc</th>\n",
+       "      <th>DataSource</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Question</th>\n",
+       "      <th>Response</th>\n",
+       "      <th>DataValueUnit</th>\n",
+       "      <th>DataValueType</th>\n",
        "      <th>...</th>\n",
-       "      <th>32</th>\n",
-       "      <th>33</th>\n",
-       "      <th>34</th>\n",
-       "      <th>35</th>\n",
-       "      <th>36</th>\n",
-       "      <th>37</th>\n",
-       "      <th>38</th>\n",
-       "      <th>39</th>\n",
-       "      <th>40</th>\n",
-       "      <th>41</th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>TopicID</th>\n",
+       "      <th>QuestionID</th>\n",
+       "      <th>DataValueTypeID</th>\n",
+       "      <th>StratificationCategoryID1</th>\n",
+       "      <th>StratificationID1</th>\n",
+       "      <th>StratificationCategoryID2</th>\n",
+       "      <th>StratificationID2</th>\n",
+       "      <th>StratificationCategoryID3</th>\n",
+       "      <th>StratificationID3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -348,38 +348,52 @@
        "</div>"
       ],
       "text/plain": [
-       "     8     9   10             11     12       13  \\\n",
-       "0  2016  2016  US  United States  BRFSS  Alcohol   \n",
-       "1  2016  2016  AL        Alabama  BRFSS  Alcohol   \n",
-       "2  2016  2016  AK         Alaska  BRFSS  Alcohol   \n",
-       "3  2016  2016  AZ        Arizona  BRFSS  Alcohol   \n",
-       "4  2016  2016  AR       Arkansas  BRFSS  Alcohol   \n",
+       "  YearStart YearEnd LocationAbbr   LocationDesc DataSource    Topic  \\\n",
+       "0      2016    2016           US  United States      BRFSS  Alcohol   \n",
+       "1      2016    2016           AL        Alabama      BRFSS  Alcohol   \n",
+       "2      2016    2016           AK         Alaska      BRFSS  Alcohol   \n",
+       "3      2016    2016           AZ        Arizona      BRFSS  Alcohol   \n",
+       "4      2016    2016           AR       Arkansas      BRFSS  Alcohol   \n",
        "\n",
-       "                                                  14    15 16  \\\n",
-       "0  Binge drinking prevalence among adults aged >=...  None  %   \n",
-       "1  Binge drinking prevalence among adults aged >=...  None  %   \n",
-       "2  Binge drinking prevalence among adults aged >=...  None  %   \n",
-       "3  Binge drinking prevalence among adults aged >=...  None  %   \n",
-       "4  Binge drinking prevalence among adults aged >=...  None  %   \n",
+       "                                            Question Response DataValueUnit  \\\n",
+       "0  Binge drinking prevalence among adults aged >=...     None             %   \n",
+       "1  Binge drinking prevalence among adults aged >=...     None             %   \n",
+       "2  Binge drinking prevalence among adults aged >=...     None             %   \n",
+       "3  Binge drinking prevalence among adults aged >=...     None             %   \n",
+       "4  Binge drinking prevalence among adults aged >=...     None             %   \n",
        "\n",
-       "                 17  ...   32   33      34       35       36   37    38    39  \\\n",
-       "0  Crude Prevalence  ...   59  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
-       "1  Crude Prevalence  ...   01  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
-       "2  Crude Prevalence  ...   02  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
-       "3  Crude Prevalence  ...   04  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
-       "4  Crude Prevalence  ...   05  ALC  ALC2_2  CRDPREV  OVERALL  OVR  None  None   \n",
+       "      DataValueType        ...        LocationID TopicID QuestionID  \\\n",
+       "0  Crude Prevalence        ...                59     ALC     ALC2_2   \n",
+       "1  Crude Prevalence        ...                01     ALC     ALC2_2   \n",
+       "2  Crude Prevalence        ...                02     ALC     ALC2_2   \n",
+       "3  Crude Prevalence        ...                04     ALC     ALC2_2   \n",
+       "4  Crude Prevalence        ...                05     ALC     ALC2_2   \n",
        "\n",
-       "     40    41  \n",
-       "0  None  None  \n",
-       "1  None  None  \n",
-       "2  None  None  \n",
-       "3  None  None  \n",
-       "4  None  None  \n",
+       "  DataValueTypeID StratificationCategoryID1 StratificationID1  \\\n",
+       "0         CRDPREV                   OVERALL               OVR   \n",
+       "1         CRDPREV                   OVERALL               OVR   \n",
+       "2         CRDPREV                   OVERALL               OVR   \n",
+       "3         CRDPREV                   OVERALL               OVR   \n",
+       "4         CRDPREV                   OVERALL               OVR   \n",
+       "\n",
+       "  StratificationCategoryID2 StratificationID2 StratificationCategoryID3  \\\n",
+       "0                      None              None                      None   \n",
+       "1                      None              None                      None   \n",
+       "2                      None              None                      None   \n",
+       "3                      None              None                      None   \n",
+       "4                      None              None                      None   \n",
+       "\n",
+       "  StratificationID3  \n",
+       "0              None  \n",
+       "1              None  \n",
+       "2              None  \n",
+       "3              None  \n",
+       "4              None  \n",
        "\n",
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,11 +404,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sliced.co"
+    "df_sliced.columns = columns"
    ]
   },
   {
